--- a/Google_tests/CMakeLists.txt
+++ b/Google_tests/CMakeLists.txt
@@ -3,13 +3,10 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 # adding the Google_Tests_run target
 add_executable(Google_Tests_run InfFloatTest.cpp)
-
-add_custom_command(
-        TARGET Google_Tests_run
-        COMMAND echo "${PROJECT_SOURCE_DIR}"
-)
 # linking Google_Tests_run with DateConverter_lib which will be tested
 
 target_link_libraries(Google_Tests_run PRIVATE LongCalcLib)
 
 target_link_libraries(Google_Tests_run PRIVATE gtest gtest_main)
+
+target_include_directories(Google_Tests_run PRIVATE "${PROJECT_SOURCE_DIR}/lib")
