Suited project with tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,14 @@ enable_testing()
 add_library(LongCalcLib STATIC lib/InfFloat.cpp
 )
 
-add_executable(LongCalc main.cpp)
-
-target_link_libraries(LongCalc PRIVATE LongCalcLib)
-
 include_directories(LongCalc)
 
 add_subdirectory("Google_tests")
+
+add_executable(pi_num pi_chud.cpp)
+target_link_libraries(pi_num LongCalcLib)
+
+#add_executable(tests Google_tests/InfFloatTest.cpp)
+#target_link_libraries(tests LongCalcLib)
+add_custom_target(pi COMMAND pi_num)
+add_custom_target(tests COMMAND Google_Tests_run)
