--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ test.dSYM
 output
 bin
 .idea
+cmake_install.cmake
+CMakeCache.txt
+CTestTestfile.cmake
+libLongCalcLib.a
+Makefile
+pi_num
+cmake-build-debug
+cmake-build-debug-coverage
+CMakeFiles
